Fixing bags on mobile devices

--- a/index.css
+++ b/index.css
@@ -1,34 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');
 
-/* Настройки для маленьких экранов */
-@media (max-width: 430px) {
-    .logo img {
-        width: 50px;
-        height: 50px;
-    }
-    .telephone-number h5 {
-        font-size: 12px;
-    }
-    .cart-profile-container {
-        width: 100px;
-    }
-    .big-photo img {
-        height: auto;
-        width: 100%;
-    }
-    footer {
-        flex-direction: column;
-        align-items: center;
-    }
-    footer .company, footer .getHelp, footer .secret, footer .followMe {
-        width: 100%;
-        text-align: center;
-    }
-    #cart-btn, #logout {
-        font-size: 14px;
-    }
-}
-
 * {
     font-family: 'Tilt Neon', sans-serif;
     margin: 0;
@@ -64,6 +35,7 @@ button.dark-mode {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: auto;
 }
 
 h1, h3, .cart-profile-container, .material-symbols-outlined, a {
@@ -72,7 +44,7 @@ h1, h3, .cart-profile-container, .material-symbols-outlined, a {
 
 header {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     height: 80px;
 }
 
@@ -296,4 +268,42 @@ h1 {
 .imgCart {
     width: 100px;
     height: 100px;
+}
+
+
+@media (max-width: 579px) {
+    .telephone-number h5 {
+        font-size: 12px;
+    }
+    .cart-profile-container {
+        width: auto;
+    }
+
+    .logo {
+        text-align: center;
+    }
+    .big-photo img {
+        height: auto;
+        width: 100%;
+    }
+    footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    footer .company, footer .getHelp, footer .secret, footer .followMe {
+        width: auto;
+        text-align: center;
+        margin-top: 50px;
+    }
+    .icons {
+        margin-bottom: 50px;
+    }
+    #cart-btn, #logout {
+        font-size: 14px;
+    }
+    .imgapi {
+        width: 150px;
+        height: 150px;
+    }
 }
